fixed the alignment on landing page

--- a/style.css
+++ b/style.css
@@ -2,45 +2,145 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  color: #010000;
 }
 
 html {
   scroll-behavior: smooth;
-  font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu,
-    Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, "Segoe UI",
-    "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol", "Noto Color Emoji";
-}
-html,
-body {
-  height: 100vh;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
   background-color: #e6e7df;
 }
 
-header {
-  padding: 1.8rem 1.5rem;
+a {
+  text-decoration: none;
 }
 
-nav {
-  display: flex;
-  justify-content: space-between;
-  font-size: 1.4rem;
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
+
+header {
+  padding: 2rem 1.5rem;
+}
+
+.logo {
+  grid-column: 1/3;
 }
 
 .nav_section {
+  grid-column: 6/10;
+  font-size: 1.25rem;
   display: flex;
   gap: 1.5rem;
+  color: #010000;
 }
 
-svg {
+.nav a {
+  grid-column: 12;
+  font-size: 1.25rem;
+  justify-self: end;
   color: #010000;
+}
+
+.logo svg {
   height: 1.3rem;
 }
 
-a {
-  text-decoration: none;
-  color: #010000;
+.landing_page {
+  padding: 2rem 1.5rem;
+  margin-top: 6rem;
+}
+
+.landing_page_box_1 {
+  grid-column: 1/4;
+}
+
+.landing_page_box_1 p {
+  font-size: 1.15rem;
+  line-height: 1.8vw;
+}
+
+.landing_page_box_1 .explore_button {
+  overflow: hidden;
+  padding-bottom: 0.3rem;
+  width: 12rem;
+}
+
+.landing_page_box_1 .container {
+  font-size: 1.15rem;
+  margin-top: 2.7rem;
+  width: 12rem;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.landing_page_box_1 .container::after {
+  position: absolute;
+  content: "";
+  width: 97%;
+  height: 1px;
+  background-color: #010000;
+  bottom: -0.3rem;
+  transition: all 0.7s ease;
+}
+
+.landing_page_box_1 .container::before {
+  position: absolute;
+  content: "";
+  width: 97.5%;
+  height: 1px;
+  background-color: #010000;
+  bottom: -0.3rem;
+  transition: all 0.7s ease;
+  transform: translateX(-410%);
+}
+
+.container .first_arrow {
+  transition: all 0.7s ease;
+}
+
+.container:hover .first_arrow {
+  transform: translateX(400%);
+}
+
+.container .hidden_arrow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  overflow: hidden;
+  right: 0;
+}
+
+.container .hidden_arrow .second_arrow {
+  transform: translateX(-400%);
+  transition: all 0.7s ease;
+}
+
+.container:hover .hidden_arrow .second_arrow {
+  transform: translateX(0);
+}
+
+.landing_page_box_1 .container:hover:after {
+  transform: translateX(410%);
+}
+
+.landing_page_box_1 .container:hover::before {
+  transform: translateX(0%);
+}
+
+.landing_page_box_2 {
+  grid-column: 6/13;
+}
+
+.landing_page_box_2 h2 {
+  font-size: 3.5vw;
+  line-height: 3.5vw;
+  font-weight: 400;
 }
